Fix zoom alignment in browsers with wider default fonts
such as firefox

--- a/src/demo/index.css
+++ b/src/demo/index.css
@@ -24,6 +24,9 @@ body{
 	flex-direction:column;
 	display:flex;
 }
+#zoom{
+	float:right;
+}
 #scroll-box{
 	overflow-y:scroll;
 }
